# BIT-MAGIC-PROBLEMS

./: CMakeLists.txt  README.md
GFG/: bitdifference.cpp  findfirstset.cpp  inputf.in  kthbitisset.cpp  kthbitsetcheck.cpp  longestconsecones.cpp  noofsetbits.cpp  powerof2.cpp  sparsenumber.cpp  swapevenodd.cpp
