cmake_minimum_required(VERSION 3.17)
project(BIT_MAGIC_PROBLEMS)

set(CMAKE_CXX_STANDARD 14)

add_executable(gfg1 GFG/kthbitisset.cpp)
add_executable(gfg2 GFG/findfirstset.cpp)
add_executable(gfg3 GFG/kthbitsetcheck.cpp)
add_executable(gfg4 GFG/noofsetbits.cpp)
add_executable(gfg5 GFG/bitdifference.cpp)
add_executable(gfg6 GFG/sparsenumber.cpp)
add_executable(gfg7 GFG/longestconsecones.cpp)